[package]
name = "ngored"
version = "0.1.0"
edition = "2024"

[features]
dhat-heap = []

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
dhat = "0.3.3"
log = "0.4.27"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tui-input = { version = "0.14.0", features = ["crossterm"], default-features = false }
tui-logger = "0.17.3"
